--- a/css/nav.css
+++ b/css/nav.css
@@ -1,32 +1,67 @@
-header{width:100%; 
-	   height:auto; 
-	   background-color:black; 
-	   color:#cfb263; 
-	   position:fixed;
-	   z-index: 1;
-	   top:0px
-      }
+header {
+   width:100%; 
+   height:auto; 
+   background-color:black; 
+   color:#cfb263; 
+   position:fixed;
+   z-index: 1;
+   top:0px
+}
 
-ul{list-style-type: none; 
+ul {
+   list-style-type: none; 
    display:inline-block; 
    float:right; 
    padding-right:30px;
-   }
+}
 
-li{display:inline-block;
+li {
+   display:inline-block;
    float:right;
    padding:15px;
-   }
+}
 
-a{
+nav ul li:hover {
+   background-color: gold;
+}
+
+a {
   text-decoration: none;
   color:#cfb263;
   font-size:25px;
-  }
-footer{
+}
+
+a:hover {
+   color: orange;
+}
+
+footer {
 	background-color:black;
 	color:#cfb263;
 	text-align:center;
 	width:100%; 
 	height:100px;
 }
+
+input[type="submit"] {
+   background-color: #4CAF50; /* Green */
+   border: none;
+   color: white;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+}
+
+input[type="reset"] {
+   background-color: #4CAF50; /* Green */
+   border: none;
+   color: white;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+}
+
